Refractor - Delete svg files and create as react components - Create assets folder inside src folder - Change settings icon

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
-      "@/translations": ["src/constants/translations/index.ts"],
-      "@/navigation": ["src/constants/navigation.ts"],
-      "@/svg/*":["assets/images/svg/*"],
+      "@translations": ["src/constants/translations/index.ts"],
+      "@navigation": ["src/constants/navigation.ts"],
     }
   },
   "include": [
