--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.1.0",
     "expo": "^50.0.6",
     "expo-font": "~11.10.2",
+    "expo-linear-gradient": "^12.7.2",
     "expo-router": "~3.4.7",
     "expo-secure-store": "^12.8.1",
     "expo-splash-screen": "~0.26.4",
