--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-svg-transformer": "^1.1.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
