--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-mmkv": "^2.11.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-shadow-2": "^7.0.8",
     "react-native-svg": "14.1.0",
     "react-native-svg-transformer": "^1.1.0",
     "react-redux": "^9.1.0",
