Added some config to create the apk build

--- a/app.json
+++ b/app.json
@@ -28,6 +28,14 @@
     "experiments": {
       "typedRoutes": true,
       "tsconfigPaths": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "df26096b-bf67-47d7-9262-cff80f336a0d"
+      }
     }
   }
 }
